Вносить всі модифікації на сторінку "Студія"

--- a/index.html
+++ b/index.html
@@ -112,13 +112,28 @@
                 <h2>Чем мы занимаемся</h2>
                 <ul class="activity">
                     <li>
-                        <img src="./images/img_1.jpg" alt="Розробка" width="370">
+                        <div class="activity-thumb">
+                            <img src="./images/img_1.jpg" alt="Розробка" width="370">
+                            <div class="activity-description">
+                                <p>Десктопные приложения</p>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        <img src="./images/img_2.jpg" alt="Адаптація" width="370">
+                        <div class="activity-thumb">
+                            <img src="./images/img_2.jpg" alt="Розробка" width="370">
+                            <div class="activity-description">
+                                <p>Мобильные приложения</p>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        <img src="./images/img_3.jpg" alt="Дизайн" width="370">
+                        <div class="activity-thumb">
+                            <img src="./images/img_3.jpg" alt="Розробка" width="370">
+                            <div class="activity-description">
+                                <p>Дизайнерские решения</p>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
