Всі вимоги до ДЗ внесено

--- a/index.html
+++ b/index.html
@@ -401,9 +401,13 @@
         </div>
     </footer>
 
-    <div data-modal class="backdrop-service is-hidden">
-        <div class="modal-service">
-            <button data-modal-close>Закрити</button>
+    <div data-modal class="service-backdrop is-hidden">
+        <div class="service-modal">
+            <button class="servise-button" data-modal-close>
+                <svg class="servise-button-icon" width="30" height="30">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
         </div>
     </div>
 
