--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,13 @@
                 <ul class="projects">
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-technokrjak.jpg" alt="Лептоп" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-technokrjak.jpg" alt="Лептоп" width="370">
+                                <div class="project-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Технокряк</h2>
                                 <p>Веб-сайт</p>
@@ -87,7 +93,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-poster.jpg" alt="Баскетболісти" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-poster.jpg" alt="Баскетболісти" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Нікого робота програми не дивує так часто, як її творця!</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Постер New Orlean vs Golden Star</h2>
                                 <p>Дизайн</p>
@@ -97,7 +108,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-restoran.jpg" alt="Ресторан" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-restoran.jpg" alt="Ресторан" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Є два способи писати безпомилкові комп’ютерні програми. І лише третій — правильний.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Ресторан Seafood</h2>
                                 <p>Приложение</p>
@@ -107,7 +123,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-prime.jpg" alt="Навушники" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-prime.jpg" alt="Навушники" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Я змінив би світ!.. та Господь не надає вихідних кодів…</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Проект Prime</h2>
                                 <p>Маркетинг</p>
@@ -117,7 +138,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-boxes.jpg" alt="Коробки" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-boxes.jpg" alt="Коробки" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Кепський той Error, що не мріє стати General’ом.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Проект Boxes</h2>
                                 <p>Приложение</p>
@@ -127,7 +153,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-inspiration.jpg" alt="Монітор" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-inspiration.jpg" alt="Монітор" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Знання асемблера не звільняє від пересічности…</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Inspiration has no Borders</h2>
                                 <p>Веб-сайт</p>
@@ -137,7 +168,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-limited.jpg" alt="Книга" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-limited.jpg" alt="Книга" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Коли комп’ютери були великими — програми були маленькими.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Издание Limited Edition</h2>
                                 <p>Дизайн</p>
@@ -147,7 +183,12 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-LAB.jpg" alt="Бірка" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-LAB.jpg" alt="Бірка" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Із комбінації лінощів і логіки виходять програмісти.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Проект LAB</h2>
                                 <p>Маркетинг</p>
@@ -157,7 +198,13 @@
 
                     <li class="project-item">
                         <a href="#">
-                            <img src="./images/portfolio-growing.jpg" alt="Ноутбук" width="370">
+                            <div class="project-thumb">
+                                <img src="./images/portfolio-growing.jpg" alt="Ноутбук" width="370">
+                                <div class="project-overlay">
+                                    <p>Анекдот &#9787;<br>Робота програміста й шамана має багато спільного – обидва мурмочуть незрозумілі слова, виконують незрозумілі дії й не
+                                    можуть пояснити, як воно працює.</p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <h2>Growing Business</h2>
                                 <p>Приложение</p>
